--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -307,6 +307,7 @@
   .author-avatar {
     width: 120px;
     height: 120px;
+    object-fit: cover;
     border-radius: 100%;
     user-select: none;
     background-color: $black;
