--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<nav class="post-nav">
+<!-- <nav class="post-nav">
   {% if page.previous %}
   <a
     class="post-nav-item post-nav-prev"
@@ -13,4 +13,4 @@
     <span class="post-title">{{ page.next.title }}</span>
   </a>
   {% endif %}
-</nav>
+</nav> -->
