--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,15 +4,44 @@ home: true
 ---
 
 
+<!-- <h3 class="posts-item-note" aria-label="Recent Posts">Recent Posts</h3>
+{%- for post in site.posts limit: site.number_of_posts -%}
+<article class="post-item">
+  <span class="post-item-date">{{ post.date | date: "%b %d, %Y" }}</span>
+  <h4 class="post-item-title">
+    <a href="{{ post.url }}">{{ post.title | escape }}</a>
+  </h4>
+</article>
+{%- endfor -%} -->
+
+<!-- <a class="card" href="https://codetheweb.blog/2017/10/09/basic-types-of-html-tags/" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+  <div>
+    <h1>Basic types of HTML tags</h1>
+    <p>Learn about some of the most common HTML tags…</p>
+    <div class="date">9 Oct 2017</div>
+    <div class="tags">
+      <div class="tag">HTML</div>
+    </div>
+  </div>
+</a> -->
+
 <section class="segment">
   <div class="container">
       <h2  aria-label="Recent Posts">Projects</h3>
       <div class="project-preview">
         {% assign projects = site.projects %}
       {%- for project in projects reversed -%}
+      
       <div class="card anchored large">
                 {% assign articleLink = project.article | strip_newlines %}
-                    <img class="myImage" src="{{ project.image }}" height="200" width="100%"   alt="{{ project.title | escape }}" />
+                
+                {% if articleLink != "" %}
+                <a href="{{project.url}}" target="_blank">
+                  {% endif %}
+                  <img class="myImage" src="{{ project.image }}" height="200" width="100%"   alt="{{ project.title | escape }}" />
+                  {% if articleLink != "" %}
+                  </a>
+                {% endif %}
               <div>
                 <time>{{project.date | date: "%Y"}}</time>
                 
@@ -94,20 +123,12 @@ home: true
             </div>
         {%- endfor -%}
       </div>
+      
     </div>
   </section>
   
 
 
 
-<!-- <h3 class="posts-item-note" aria-label="Recent Posts">Recent Posts</h3>
-{%- for post in site.posts limit: site.number_of_posts -%}
-<article class="post-item">
-  <span class="post-item-date">{{ post.date | date: "%b %d, %Y" }}</span>
-  <h4 class="post-item-title">
-    <a href="{{ post.url }}">{{ post.title | escape }}</a>
-  </h4>
-</article>
-{%- endfor -%} -->
 
 
