--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,9 +80,9 @@ layout: compress
 
     </main>
 
-    {% if page.modified %}
+    <!-- {% if page.modified %}
       <small class="post-updated-at">updated_at {{page.modified | date: "%d-%m-%Y"}}</small>
-    {% endif %}
+    {% endif %} -->
     {% if page.next or page.previous %}
       {% include navigation.html %}
     {% endif %}
