--- a/_sass/klise/_base.scss
+++ b/_sass/klise/_base.scss
@@ -293,8 +293,8 @@ p.aboutThing {
 }
 // Wrapper
 .wrapper {
-  // max-width: -webkit-calc(#{$narrow-size} - (#{$spacing-full} * 2));
-  // max-width: calc(#{$narrow-size} - (#{$spacing-full} * 2));
+  max-width: -webkit-calc(#{$narrow-size} - (#{$spacing-full} * 2));
+  max-width: calc(#{$narrow-size} - (#{$spacing-full} * 2));
   position: relative;
   margin-right: auto;
   margin-left: auto;
