--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,15 +4,15 @@ home: true
 ---
 
 
-<!-- <h3 class="posts-item-note" aria-label="Recent Posts">Recent Posts</h3>
-{%- for post in site.posts limit: site.number_of_posts -%}
+<h3 class="posts-item-note" aria-label="Recent Posts">Blogs ({{ site.posts | size }})</h3>
+{%- for post in site.posts -%}
 <article class="post-item">
   <span class="post-item-date">{{ post.date | date: "%b %d, %Y" }}</span>
   <h4 class="post-item-title">
     <a href="{{ post.url }}">{{ post.title | escape }}</a>
   </h4>
 </article>
-{%- endfor -%} -->
+{%- endfor -%}
 
 <!-- <a class="card" href="https://codetheweb.blog/2017/10/09/basic-types-of-html-tags/" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
   <div>
