--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
     <a href="https://www.linkedin.com/in/waleed-nizamani-957112104/" target="_blank" rel="noreferrer noopener"
     ><img src="https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white" alt="github" /></a>
     
-    <a href="https://github.com/K-Rafiki" target="_blank" rel="noreferrer noopener"
+    <a href="https://github.com/EyrisCrafts" target="_blank" rel="noreferrer noopener"
       ><img src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white" alt="github" /></a>
   
     <input type="checkbox" id="menu-trigger" class="menu-trigger" />
