--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -24,6 +24,12 @@ a.button {
   white-space: nowrap;
 }
 
+.customCard:hover {
+  box-shadow: 0 2px 8px 0 rgba(255,255,255,0.2);
+  transition: 0.3s;
+  background-color: var(--gray-8);
+  cursor: pointer;
+}
 
 
 button.large,
